// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SolutionCard component it should render a service card 1`] = `
.c10 {
  border: 2px solid transparent;
  background: none;
  font-size: 1.4rem;
  font-weight: bold;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.2rem 0.8rem;
  line-height: 2.4rem;
  text-transform: uppercase;
  text-align: center;
  color: hsl(166,100%,34%);
  color: hsla(0,0%,100%);
  background-color: hsl(166,100%,34%);
}

.c10:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c10 > svg {
  margin-right: 0.8rem;
}

.c10:hover:not(:disabled) {
  color: hsla(0,0%,100%);
  background-color: hsl(166,100%,34%);
  border-color: hsl(166,100%,34%);
}

.c10:focus {
  box-shadow: 0px 0px 4px 2px hsla(29,94%,62%);
}

.c10:hover:not(:disabled) {
  opacity: 0.74;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem;
  gap: 0.6rem;
  cursor: pointer;
}

.c5 span {
  display: inline-block;
  font-size: 1.6rem;
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c5 svg {
  width: 3rem;
  height: 3rem;
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c5 svg:hover {
  -webkit-animation: 1.5s jBAKzd;
  animation: 1.5s jBAKzd;
}

.c5 svg {
  color: hsla(0,0%,52%);
}

.c5 span {
  color: hsla(0,0%,40%);
}

.c0 {
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,0%,100%);
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  padding: 0.8rem;
}

.c0:hover {
  -webkit-transform: translateY(-0.7rem);
  -ms-transform: translateY(-0.7rem);
  transform: translateY(-0.7rem);
}

.c1 {
  width: 100%;
  height: 25.4rem;
  position: relative;
}

.c1 img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 0.5rem;
}

.c2 {
  box-shadow: 6px 3px 6px rgb(0 0 0 / 50%);
  position: absolute;
  left: 0;
  padding: 0.4rem 0.8rem;
  font-size: 1.4rem;
  line-height: 2.4rem;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
  bottom: 2rem;
  background-color: hsla(0,0%,100%);
  color: hsla(0,0%,31%);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1.6rem;
  font-weight: 400;
  height: 100%;
}

.c7 {
  font-family: 'Montserrat';
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 2.4rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.2rem;
  padding-top: 0.8rem;
  border-top: 0.1rem solid hsla(0,0%,93%);
  margin-top: auto;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  font-size: 1rem;
  color: hsla(0,0%,52%);
  text-transform: uppercase;
  margin-top: 0.4rem;
  margin-bottom: 1.6rem;
}

.c4 {
  margin-bottom: 1rem;
}

.c4 > div {
  padding: 0;
}

.c6 {
  font-size: 2.8rem;
  line-height: 3.3rem;
  color: hsl(166,100%,34%);
  margin-bottom: 1.2rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 svg {
  margin-right: 0.4rem;
}

@media screen and (min-width:768px) {
  .c10 {
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        alt="name"
        src="/environment-rafiki.svg"
      />
      <div
        class="c2"
      >
        Serviço
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        data-testid="card-heart"
      >
        <div
          class="c5"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
            />
          </svg>
          <span>
            0
          </span>
        </div>
      </div>
      <h2
        class="c6"
      >
        R$ 1,00
      </h2>
      <h3
        class="c7"
        data-testid="card-title"
      >
        name
      </h3>
      <span
        class="c8"
      >
        any
      </span>
      <div
        class="c9"
      >
        <button
          class="c10"
          name=""
          type="button"
        >
          <div
            class="c11"
          >
            <svg
              fill="none"
              font-size="18"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="9"
                cy="21"
                r="1"
              />
              <circle
                cx="20"
                cy="21"
                r="1"
              />
              <path
                d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"
              />
            </svg>
            Adicionar ao carrinho
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SolutionCard component it should render a technology card 1`] = `
.c1 {
  color: hsla(0,0%,7%);
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem;
  gap: 0.6rem;
  cursor: pointer;
}

.c6 span {
  display: inline-block;
  font-size: 1.6rem;
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c6 svg {
  width: 3rem;
  height: 3rem;
  -webkit-animation: 1.5s none;
  animation: 1.5s none;
}

.c6 svg:hover {
  -webkit-animation: 1.5s jBAKzd;
  animation: 1.5s jBAKzd;
}

.c6 svg {
  color: hsla(0,0%,52%);
}

.c6 span {
  color: hsla(0,0%,40%);
}

.c0 {
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: hsla(0,0%,100%);
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  padding: 0.8rem;
}

.c0:hover {
  -webkit-transform: translateY(-0.7rem);
  -ms-transform: translateY(-0.7rem);
  transform: translateY(-0.7rem);
}

.c2 {
  width: 100%;
  height: 25.4rem;
  position: relative;
}

.c2 img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 0.5rem;
}

.c3 {
  box-shadow: 6px 3px 6px rgb(0 0 0 / 50%);
  position: absolute;
  left: 0;
  padding: 0.4rem 0.8rem;
  font-size: 1.4rem;
  line-height: 2.4rem;
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
  bottom: 2rem;
  background-color: hsla(0,0%,100%);
  color: hsla(0,0%,31%);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 1.6rem;
  font-weight: 400;
  height: 100%;
}

.c7 {
  font-family: 'Montserrat';
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 2.4rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.2rem;
  padding-top: 0.8rem;
  border-top: 0.1rem solid hsla(0,0%,93%);
  margin-top: auto;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  font-size: 1rem;
  color: hsla(0,0%,52%);
  text-transform: uppercase;
  margin-top: 0.4rem;
  margin-bottom: 1.6rem;
}

.c5 {
  margin-bottom: 1rem;
}

.c5 > div {
  padding: 0;
}

.c10 {
  font-size: 0.8rem;
  font-weight: 700;
  line-height: 1.2rem;
  color: hsla(0,0%,52%);
  padding: 0.2rem 0.4rem;
  border: 1px solid hsla(0,0%,52%);
  border-radius: 1rem;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
      target="_self"
    >
      <div
        class="c2"
      >
        <img
          alt="title"
          src="/card-image.jpg"
        />
        <div
          class="c3"
        >
          Tecnologia
        </div>
      </div>
    </a>
    <div
      class="c4"
    >
      <div
        class="c5"
        data-testid="card-heart"
      >
        <div
          class="c6"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
            />
          </svg>
          <span>
            1
          </span>
        </div>
      </div>
      <a
        class="c1"
        target="_self"
      >
        <h3
          class="c7"
          data-testid="card-title"
        >
          title
        </h3>
        <span
          class="c8"
        />
      </a>
      <div
        class="c9"
      >
        <span
          class="c10"
        >
          any
        </span>
      </div>
    </div>
  </div>
</div>
`;
